# lang

./: .gitignore  LICENSE  README  README.md  Version.md  hw-build.ps1
_lang/: scope.md  todo-list.md
conc/: Readme.md  Simple.java  simple.go  simple.py  simple.rs  simple.zig
conc/golang/: simplePoolQueue.go
doc/: data-structure.vsd  sort.py  ~$$data-structure.~vsd
hi-c/: compiler.md  hw.c
hi-c-cpp/: compiler.md  hw.c  hw.cpp
hi-es/: es5-class.js  promise.js  sort.js  tool.format.js  tools.util.js  tools.util.md
hi-es/threejs/: .gitignore  (+4 more)
hi-golang/: README.md  closure.go  type.go
hi-kotlin/: hw.kt
hi-php/: callback.php  generators.php  instance.php  sample-stream.php  sleep-while.php  sort.php  sql-builder.php
hi-ps1/: SzmPath-5.1.ps1  SzmPath.ps1  download-image.ps1  jobs-request-web.ps1  mysql-aurora-backup.ps1  oci-dp.ps1  swc-java17.ps1
hi-python/: builtins.py
hi-rust/: HelloWorld.rs  hw.rs  rust-hi.rs
hi-rust/learning22/: .gitignore  Cargo.toml  Readme.md
hi-rust/learning22/src/yang/: action.rs  args.rs  cmd.rs  lib.rs
hi-shell/: git-archive.sh  nginx-service.sh  service-nginx.sh
hi-vbs/: readText.vbs
mind/: ThinkMindRobat.md  generalSystemDesignMethod.md  generalSystemDesignMethod.vsdx  softwareDesignByModel.md  yangkv.md
src/: C-Relearning.md  CRelearning.md  Consult.md  JVM.md  Js.md  Network.md  Newther.md  Python.docx  Scala.docx  SoftwareTesting.md  WeCanDo.md  Web.md  Zig.md  api.md  container.md  css.md  database.md  electron.md  golang.docx  julia.md  lang  lang.docx  lang.md  node-npm.md  nodeJS.docx  python.md
(+410 files in other folders)
